--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "db:seed": "prisma db seed",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "seed:items": "tsx prisma/seedItems.ts",
+    "seed:tables": "tsx prisma/seedTables.ts",
     "lint": "eslint"
   },
   "dependencies": {
@@ -52,6 +56,7 @@
     "prisma": "^6.16.3",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
