--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
     "superjson": "^2.2.2",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
