--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "postinstall": "prisma generate",
-
     "// -------- prisma core --------": "",
     "prisma:format": "prisma format",
     "prisma:validate": "prisma validate",
@@ -17,17 +16,16 @@
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
-
     "// -------- seeds (flow oficial) --------": "",
     "db:seed": "prisma db seed",
+    "db:seed:classes": "tsx prisma/seed/classes.seed.ts",
+    "db:seed:subclasses": "tsx prisma/seed/subclasses.seed.ts",
     "db:reset": "rimraf ./node_modules/.prisma && prisma migrate reset --force --skip-generate --skip-seed && prisma generate && prisma db seed",
-
     "// -------- seeds (granular, opcionais) --------": "",
     "seed:core": "tsx prisma/seed.ts",
     "seed:items": "tsx prisma/seedItems.ts",
     "seed:tables": "tsx prisma/seedTables.ts",
     "seed:all": "npm run seed:core && npm run seed:items && npm run seed:tables",
-
     "// -------- quality --------": "",
     "lint": "eslint ."
   },
@@ -37,10 +35,12 @@
   },
   "dependencies": {
     "@prisma/client": "latest",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
