--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prisma": "latest",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
